--- a/web/themes/custom/durhamtech/scss/pages/_program.scss
+++ b/web/themes/custom/durhamtech/scss/pages/_program.scss
@@ -15,6 +15,11 @@
     }
   }
 
+  .image, .description {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   .accredited {
     margin-top: 30px;
   }
@@ -40,6 +45,12 @@
 
     .program-header {
       padding-bottom: $section-spacing-lg;
+    }
+
+    .image {
+      float: left;
+      margin-right: 5%;
+      width: 45%;
     }
 
     .field--name-field-program-image {
